--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "eslint": "4.8.0",
-    "eslint-config-jitsi": "*",
+    "eslint-config-jitsi": "jitsi/eslint-config-jitsi#v0.1",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-react": "7.4.0"
