--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jigmi",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Jitsi Generic Monitoring Infrastructure",
   "repository": {
     "type": "git",
@@ -32,15 +32,15 @@
     "eslint-config-jitsi": "jitsi/eslint-config-jitsi#v0.1",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-react": "7.4.0"
+    "eslint-plugin-react": "7.4.0",
+    "husky": "0.14.3"
   },
   "scripts": {
     "lint": "eslint .",
     "postinstall": "webpack",
-    "validate": "npm ls",
-    "start": "node server.js"
+    "start": "node server.js",
+    "precommit": "npm lint"
   },
-  "pre-commit": [],
   "main": "./index.js",
   "license": "Apache-2.0"
 }
