--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-highcharts": "13.0.0",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
+    "sequelize": "4.17.2",
     "sqlite3": "3.1.13",
     "webpack": "3.8.1"
   },
