--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
   "author": "bbaldino",
   "readmeFilename": "README.md",
   "dependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "body-parser": "1.18.2",
-    "express": "4.16.2",
-    "highcharts": "6.0.2",
-    "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-highcharts": "13.0.0",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "sequelize": "4.17.2",
-    "sqlite3": "3.1.13",
-    "webpack": "3.8.1"
+    "@babel/core": "7.4.5",
+    "babel-loader": "8.0.6",
+    "@babel/preset-react": "7.0.0",
+    "body-parser": "1.19.0",
+    "express": "4.17.1",
+    "highcharts": "7.1.2",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-highcharts": "16.0.2",
+    "react-redux": "7.1.0",
+    "redux": "4.0.1",
+    "sequelize": "5.9.0",
+    "sqlite3": "4.0.9",
+    "webpack": "4.35.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.0.1",
-    "eslint": "4.8.0",
+    "babel-eslint": "10.0.2",
+    "eslint": "6.0.1",
     "eslint-config-jitsi": "jitsi/eslint-config-jitsi#v0.1",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-react": "7.4.0",
-    "husky": "0.14.3"
+    "eslint-plugin-flowtype": "3.11.1",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-react": "7.14.2",
+    "husky": "2.7.0",
+    "webpack-cli": "^3.3.5"
   },
   "scripts": {
     "lint": "eslint .",
