--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/core": "7.4.5",
     "babel-loader": "8.0.6",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/preset-react": "7.0.0",
     "body-parser": "1.19.0",
     "express": "4.17.1",
