--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "redux": "4.0.1",
     "sequelize": "5.9.0",
     "sqlite3": "4.0.9",
+    "umzug": "2.2.0",
     "webpack": "4.35.0"
   },
   "devDependencies": {
     "babel-eslint": "10.0.2",
     "eslint": "6.0.1",
-    "eslint-config-jitsi": "jitsi/eslint-config-jitsi#v0.1",
+    "eslint-config-jitsi": "jitsi/eslint-config-jitsi#1.0.1",
     "eslint-plugin-flowtype": "3.11.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-react": "7.14.2",
